@@ -2016,7 +2016,12 @@ command to generate the output files.
   </mime-type>
   <mime-type type="application/x-lzop">
     <_comment>LZO archive</_comment>
+    <acronym>LZO</acronym>
+    <expanded-acronym>Lempel-Ziv-Oberhumer</expanded-acronym>
     <generic-icon name="package-x-generic"/>
+    <magic priority="50">
+      <match type="string" value="\x89\x4c\x5a\x4f\x00\x0d\x0a\x1a\x0a" offset="0"/>
+    </magic>
     <glob pattern="*.lzo"/>
   </mime-type>
   <mime-type type="application/x-magicpoint">
