@@ -181,6 +181,8 @@ good-1-delta-lzma2.tiff.xz application/x-xz
 spinboxes-0.1.1-Linux.tar.xz application/x-xz-compressed-tar ox
 # Created using lzip 1.1
 test.lz application/x-lzip
+# Created using lzop 1.02rc1, lzo 2.03
+test.lzo application/x-lzop
 
 # Audio/Video files
 # Copied from /usr/share/sounds/generic.wav
